--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -90,7 +90,7 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <ComboBox HorizontalAlignment="Right" Margin="0,10" Width="100" Visibility="Collapsed"/>
+                            <ComboBox Style="{StaticResource ComboxNoBorderStyle}" Visibility="Collapsed"/>
                             <pr:PullToRefreshBox Grid.Row="1">
                                 <pr:PullToRefreshBox.TopIndicatorTemplate>
                                     <DataTemplate>
@@ -146,13 +146,12 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <ComboBox HorizontalAlignment="Right" Margin="0,5" BorderThickness="0"
+                            <ComboBox Style="{StaticResource ComboxNoBorderStyle}"
                                       ItemsSource="{Binding GroupsFiltersList}" SelectedItem="{Binding SelectedGroupFilter, Mode=TwoWay}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding Converter={StaticResource EnumToStringConverter}}" 
-                                                   FontSize="12"
-                                                   Foreground="{StaticResource settled}"/>
+                                                   Style="{StaticResource ComboxText}"/>
                                     </DataTemplate>
                                 </ComboBox.ItemTemplate>
                             </ComboBox>
