--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:con_bal="using:Split_It.Converter.Balance"
+    xmlns:winux="using:WinUX.Xaml.Converters"
     mc:Ignorable="d">
 
     <Page.DataContext>
@@ -13,6 +14,8 @@
     </Page.DataContext>
 
     <Page.Resources>
+        <winux:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter"/>
+        
         <con_bal:TextConverter x:Key="BalanceTextConverter"/>
         <con_bal:AmountConverter x:Key="BalanceAmountConverter"/>
         <con_bal:VisibilityConverter x:Key="BalanceVisibilityConverter"/>
@@ -41,9 +44,12 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="{Binding Name}" Foreground="White" />
-                <TextBlock Text="{Binding Email}" Foreground="White" Grid.Row="1"/>
+                <TextBlock Text="{Binding Email}" Foreground="White" 
+                           Visibility="{Binding Email, Converter={StaticResource EmptyStringToVisibilityConverter}}" Grid.Row="1"/>
             </Grid>
-            <ListView RelativePanel.Below="image" ItemsSource="{Binding Balance}" RelativePanel.RightOf="BackButton">
+            <ListView RelativePanel.Below="image" ItemsSource="{Binding Balance}" 
+                      Margin="0,10"
+                      RelativePanel.RightOf="BackButton">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
