get all expenses

--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -80,7 +80,7 @@
                 </DataTemplate>
             </pr:PullToRefreshBox.TopIndicatorTemplate>
 
-            <ListView>
+            <ListView ItemsSource="{Binding ExpensesList}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         
