--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -83,6 +83,9 @@
             <ListView ItemsSource="{Binding ExpensesList}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
+                        <RelativePanel Margin="15,10">
+                            <TextBlock Text="{Binding Description}" Foreground="Black"/>
+                        </RelativePanel>
                         
                     </DataTemplate>
                 </ListView.ItemTemplate>
