--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -7,6 +7,7 @@
     xmlns:pr="using:PullToRefresh.UWP"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:con_bal="using:Split_It.Converter.Balance"
+    xmlns:con_repay ="using:Split_It.Converter.Repayment"
     xmlns:winux="using:WinUX.Xaml.Converters"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d">
@@ -18,10 +19,15 @@
     <Page.Resources>
         <winux:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter"/>
         <winux:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        
+        <winux:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+
         <con_bal:TextConverter x:Key="BalanceTextConverter"/>
         <con_bal:AmountConverter x:Key="BalanceAmountConverter"/>
         <con_bal:VisibilityConverter x:Key="BalanceVisibilityConverter"/>
+
+        <con_repay:RepaymentBorrowLentConverter x:Key="RepaymentBorrowLentConverter" OtherUserId="{Binding CurrentFriend.id}"/>
+        <con_repay:RepaymentColorConverter x:Key="RepaymentColorConverter" OtherUserId="{Binding CurrentFriend.id}"/>
+        <con_repay:RepaymentAmountConverter x:Key="RepaymentAmountConverter" OtherUserId="{Binding CurrentFriend.id}"/>
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -84,9 +90,24 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <RelativePanel Margin="15,10">
-                            <TextBlock Text="{Binding Description}" Foreground="Black"/>
+                            <Image Source="Assets/Images/expense_general.png" x:Name="image" Stretch="None" Height="25"/>
+                            <TextBlock Text="{Binding Description}" x:Name="textName"
+                                       RelativePanel.RightOf="image" Margin="15,0,0,0"/>
+                            <Grid RelativePanel.AlignRightWithPanel="True"
+                                  Visibility="{Binding Payment, Converter={StaticResource InverseBooleanToVisibilityConverter}}"
+                                  RelativePanel.AlignVerticalCenterWith="image">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Foreground="{Binding Repayments, Converter={StaticResource RepaymentColorConverter}}"
+                                           HorizontalAlignment="Right"
+                                           Text="{Binding Repayments, Converter={StaticResource RepaymentBorrowLentConverter}}" FontSize="13"/>
+                                <TextBlock Foreground="{Binding Repayments, Converter={StaticResource RepaymentColorConverter}}"
+                                           Grid.Row="1" HorizontalAlignment="Right"
+                                           Text="{Binding Repayments, Converter={StaticResource RepaymentAmountConverter}}" FontSize="16"/>
+                            </Grid>
                         </RelativePanel>
-                        
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
