--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -9,6 +9,7 @@
     xmlns:con_bal="using:Split_It.Converter.Balance"
     xmlns:con_repay ="using:Split_It.Converter.Repayment"
     xmlns:winux="using:WinUX.Xaml.Converters"
+    xmlns:converter="using:Split_It.Converter"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d">
 
@@ -21,6 +22,7 @@
         <winux:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <winux:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
 
+        <converter:ExpenseWhoPaidConverter x:Key="ExpenseWhoPaidConverter"/>
         <con_bal:TextConverter x:Key="BalanceTextConverter"/>
         <con_bal:AmountConverter x:Key="BalanceAmountConverter"/>
         <con_bal:VisibilityConverter x:Key="BalanceVisibilityConverter"/>
@@ -90,10 +92,8 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <RelativePanel Margin="15,10">
-                            <Image Source="Assets/Images/expense_general.png" x:Name="image" Stretch="None" Height="25"/>
-                            <TextBlock Text="{Binding Description}" x:Name="textName"
-                                       RelativePanel.RightOf="image" Margin="15,0,0,0"/>
-                            <Grid RelativePanel.AlignRightWithPanel="True"
+                            <Image Source="Assets/Images/expense_general.png" x:Name="image" Stretch="Uniform" Width="25"/>
+                            <Grid RelativePanel.AlignRightWithPanel="True" x:Name="AmountGrid"
                                   Visibility="{Binding Payment, Converter={StaticResource InverseBooleanToVisibilityConverter}}"
                                   RelativePanel.AlignVerticalCenterWith="image">
                                 <Grid.RowDefinitions>
@@ -104,8 +104,27 @@
                                            HorizontalAlignment="Right"
                                            Text="{Binding Repayments, Converter={StaticResource RepaymentBorrowLentConverter}}" FontSize="13"/>
                                 <TextBlock Foreground="{Binding Repayments, Converter={StaticResource RepaymentColorConverter}}"
-                                           Grid.Row="1" HorizontalAlignment="Right"
-                                           Text="{Binding Repayments, Converter={StaticResource RepaymentAmountConverter}}" FontSize="16"/>
+                                           Grid.Row="1" HorizontalAlignment="Right">
+                                    <Run Text="{Binding CurrencyCode}"/><Run Text="{Binding Repayments, Converter={StaticResource RepaymentAmountConverter}}" FontSize="16"/>
+                                </TextBlock>
+                                           
+                            </Grid>
+
+                            <Grid RelativePanel.AlignVerticalCenterWith="image"
+                                  Margin="15,0"
+                                  RelativePanel.RightOf="image" RelativePanel.LeftOf="AmountGrid">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Description}" TextTrimming="CharacterEllipsis"/>
+                                <TextBlock Foreground="{StaticResource settled}"
+                                           Visibility="{Binding Payment, Converter={StaticResource InverseBooleanToVisibilityConverter}}"
+                                           FontSize="13" Grid.Row="1">
+                                    <Run Text="{Binding Users, Converter={StaticResource ExpenseWhoPaidConverter}}"/>
+                                    <Run Text="paid"/>
+                                    <Run Text="{Binding CurrencyCode}"/><Run Text="{Binding Cost}"/>
+                                </TextBlock>
                             </Grid>
                         </RelativePanel>
                     </DataTemplate>
