--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -7,9 +7,7 @@
     xmlns:pr="using:PullToRefresh.UWP"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:con_bal="using:Split_It.Converter.Balance"
-    xmlns:con_repay ="using:Split_It.Converter.Repayment"
     xmlns:winux="using:WinUX.Xaml.Converters"
-    xmlns:converter="using:Split_It.Converter"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d">
 
@@ -18,18 +16,17 @@
     </Page.DataContext>
 
     <Page.Resources>
-        <winux:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter"/>
-        <winux:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        <winux:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Skins/ExpenseSkin.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <winux:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter"/>
+            <winux:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
-        <converter:ExpenseWhoPaidConverter x:Key="ExpenseWhoPaidConverter"/>
-        <con_bal:TextConverter x:Key="BalanceTextConverter"/>
-        <con_bal:AmountConverter x:Key="BalanceAmountConverter"/>
-        <con_bal:VisibilityConverter x:Key="BalanceVisibilityConverter"/>
-
-        <con_repay:RepaymentBorrowLentConverter x:Key="RepaymentBorrowLentConverter" OtherUserId="{Binding CurrentFriend.id}"/>
-        <con_repay:RepaymentColorConverter x:Key="RepaymentColorConverter" OtherUserId="{Binding CurrentFriend.id}"/>
-        <con_repay:RepaymentAmountConverter x:Key="RepaymentAmountConverter" OtherUserId="{Binding CurrentFriend.id}"/>
+            <con_bal:TextConverter x:Key="BalanceTextConverter"/>
+            <con_bal:AmountConverter x:Key="BalanceAmountConverter"/>
+            <con_bal:VisibilityConverter x:Key="BalanceVisibilityConverter"/>
+        </ResourceDictionary>
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -88,48 +85,7 @@
                 </DataTemplate>
             </pr:PullToRefreshBox.TopIndicatorTemplate>
 
-            <ListView ItemsSource="{Binding ExpensesList}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <RelativePanel Margin="15,10">
-                            <Image Source="Assets/Images/expense_general.png" x:Name="image" Stretch="Uniform" Width="25"/>
-                            <Grid RelativePanel.AlignRightWithPanel="True" x:Name="AmountGrid"
-                                  Visibility="{Binding Payment, Converter={StaticResource InverseBooleanToVisibilityConverter}}"
-                                  RelativePanel.AlignVerticalCenterWith="image">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                </Grid.RowDefinitions>
-                                <TextBlock Foreground="{Binding Repayments, Converter={StaticResource RepaymentColorConverter}}"
-                                           HorizontalAlignment="Right"
-                                           Text="{Binding Repayments, Converter={StaticResource RepaymentBorrowLentConverter}}" FontSize="13"/>
-                                <TextBlock Foreground="{Binding Repayments, Converter={StaticResource RepaymentColorConverter}}"
-                                           Grid.Row="1" HorizontalAlignment="Right">
-                                    <Run Text="{Binding CurrencyCode}"/><Run Text="{Binding Repayments, Converter={StaticResource RepaymentAmountConverter}}" FontSize="16"/>
-                                </TextBlock>
-                                           
-                            </Grid>
-
-                            <Grid RelativePanel.AlignVerticalCenterWith="image"
-                                  Margin="15,0"
-                                  RelativePanel.RightOf="image" RelativePanel.LeftOf="AmountGrid">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Description}" TextTrimming="CharacterEllipsis"/>
-                                <TextBlock Foreground="{StaticResource settled}"
-                                           Visibility="{Binding Payment, Converter={StaticResource InverseBooleanToVisibilityConverter}}"
-                                           FontSize="13" Grid.Row="1">
-                                    <Run Text="{Binding Users, Converter={StaticResource ExpenseWhoPaidConverter}}"/>
-                                    <Run Text="paid"/>
-                                    <Run Text="{Binding CurrencyCode}"/><Run Text="{Binding Cost}"/>
-                                </TextBlock>
-                            </Grid>
-                        </RelativePanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <ListView ItemsSource="{Binding ExpensesList}" ItemTemplate="{StaticResource ExpenseTemplate}"/>
             <Interactivity:Interaction.Behaviors>
                 <Core:EventTriggerBehavior EventName="RefreshInvoked">
                     <Core:InvokeCommandAction Command="{Binding RefreshExpensesCommand, Mode=OneWay}"/>
