load more holder

--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -85,7 +85,23 @@
                 </DataTemplate>
             </pr:PullToRefreshBox.TopIndicatorTemplate>
 
-            <ListView ItemsSource="{Binding ExpensesList}" ItemTemplate="{StaticResource ExpenseTemplate}"/>
+            <ListView ItemsSource="{Binding ExpensesList}" ItemTemplate="{StaticResource ExpenseTemplate}">
+                <ListView.FooterTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Button Content="Load older expenses" Foreground="{StaticResource settled}" 
+                                    Background="Transparent"
+                                    Command="{Binding LoadMoreCommand}"
+                                    Visibility="{Binding IsLoadingNewPage, Converter={StaticResource InverseBooleanToVisibilityConverter}}"
+                                    Style="{StaticResource NoBorderSelectButton}" 
+                                    HorizontalAlignment="Center" Height="30"/>
+                            <ProgressRing IsActive="{Binding IsLoadingNewPage}"/>
+                        </Grid>
+                        
+
+                    </DataTemplate>
+                </ListView.FooterTemplate>
+            </ListView>
             <Interactivity:Interaction.Behaviors>
                 <Core:EventTriggerBehavior EventName="RefreshInvoked">
                     <Core:InvokeCommandAction Command="{Binding RefreshExpensesCommand, Mode=OneWay}"/>
@@ -94,8 +110,7 @@
         </pr:PullToRefreshBox>
 
         <Canvas Background="DarkGray" Opacity="0.5" 
-					Grid.Row="1"
-					Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+				Grid.Row="1" Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
         <ProgressRing IsActive="{Binding IsBusy}" Grid.Row="1"/>
     </Grid>
 </Page>
