--- a/Split_It/Split_It/Skins/ExpenseSkin.xaml
+++ b/Split_It/Split_It/Skins/ExpenseSkin.xaml
@@ -60,5 +60,9 @@
             </Grid>
         </RelativePanel>
     </DataTemplate>
+
+    <DataTemplate x:Key="FooterTemplate">
+        
+    </DataTemplate>
     
 </ResourceDictionary>
