base for expense detail

--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -85,7 +85,8 @@
                 </DataTemplate>
             </pr:PullToRefreshBox.TopIndicatorTemplate>
 
-            <ListView ItemsSource="{Binding ExpensesList}" ItemTemplate="{StaticResource ExpenseTemplate}" FooterTemplate="{StaticResource FooterTemplate}"/>
+            <ListView ItemsSource="{Binding ExpensesList}" ItemTemplate="{StaticResource ExpenseTemplate}" 
+                      FooterTemplate="{StaticResource FooterTemplate}" SelectedItem="{Binding SelectedExpense, Mode=TwoWay}"/>
             <Interactivity:Interaction.Behaviors>
                 <Core:EventTriggerBehavior EventName="RefreshInvoked">
                     <Core:InvokeCommandAction Command="{Binding RefreshExpensesCommand, Mode=OneWay}"/>
